log
Thu 24 Aug 2023 08:10:27 PM UTC: 
 tests:  0|6
total_score: 0/70
67e8563
Thu 24 Aug 2023 08:17:01 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
cdee942
Thu 24 Aug 2023 08:17:36 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
5173b7d
Thu 24 Aug 2023 08:18:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b24664e
Thu 24 Aug 2023 08:22:57 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
8e05c3d
Thu 24 Aug 2023 08:26:27 PM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |   list -> prev = NULL;
      |        ^~
list.c:66:8: error: statement with no effect [-Werror=unused-value]
   66 |   list -> tail;
      |   ~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ee1f44b
Thu 24 Aug 2023 08:27:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:65:8: error: ‘List’ {aka ‘struct List’} has no member named ‘prev’
   65 |   list -> prev = NULL;
      |        ^~
Compilation failed
54d47d3
Thu 24 Aug 2023 08:30:19 PM UTC: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
91783c7
Thu 24 Aug 2023 08:40:27 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:70:1: error: expected identifier or ‘(’ before ‘}’ token
   70 | }
      | ^
Compilation failed
a5d5386
Thu 24 Aug 2023 08:41:27 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  2|4
total_score: 20/70
388b566
Thu 24 Aug 2023 08:53:31 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:44:33: error: expected ‘;’ before ‘}’ token
   44 |   list -> current = list -> head
      |                                 ^
      |                                 ;
   45 | 
   46 | }
      | ~                                
list.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
37cbf41
Thu 24 Aug 2023 08:54:38 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 25/70
0d22c70
Thu 24 Aug 2023 09:03:35 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
3a96991
Thu 24 Aug 2023 09:05:05 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  6|3
total_score: 35/70
50238a0
Fri 25 Aug 2023 02:56:58 AM UTC: 
 list.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c:59:1: error: unknown type name ‘La’
   59 | La primera retorna el dato del último elemento en la lista y actualiza el current al nodo correspondiente.
      | ^~
list.c:59:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘retorna’
   59 | La primera retorna el dato del último elemento en la lista y actualiza el current al nodo correspondiente.
      |            ^~~~~~~
list.c:59:12: error: unknown type name ‘retorna’
list.c:70:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘segunda’
   70 | * La segunda función retorna el dato del nodo anterior a current y actualiza el current para que apunte a ese nodo.
      |      ^~~~~~~
list.c:70:6: error: unknown type name ‘segunda’
Compilation failed
2c9da99
Fri 25 Aug 2023 02:57:07 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:59:1: error: unknown type name ‘La’
   59 | La primera retorna el dato del último elemento en la lista y actualiza el current al nodo correspondiente.
      | ^~
list.c:59:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘retorna’
   59 | La primera retorna el dato del último elemento en la lista y actualiza el current al nodo correspondiente.
      |            ^~~~~~~
list.c:59:12: error: unknown type name ‘retorna’
list.c:70:6: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘segunda’
   70 | * La segunda función retorna el dato del nodo anterior a current y actualiza el current para que apunte a ese nodo.
      |      ^~~~~~~
list.c:70:6: error: unknown type name ‘segunda’
Compilation failed
9cfcc86
Fri 25 Aug 2023 02:57:21 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 35/70
0f47e61
Fri 25 Aug 2023 03:00:32 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 35/70
fa57f7b
Fri 25 Aug 2023 03:16:15 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|3
total_score: 35/70
544e931
Fri 25 Aug 2023 03:16:45 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|3
total_score: 35/70
913a990
Fri 25 Aug 2023 03:17:44 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  7|3
total_score: 35/70
af49edf
Fri 25 Aug 2023 03:19:06 AM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:15: error: expected identifier before ‘)’ token
   70 |   if(!list -> ) return NULL;
      |               ^
list.c:74:3: error: expected identifier before ‘return’
   74 |   return ;
      |   ^~~~~~
list.c:75:1: error: control reaches end of non-void function [-Werror=return-type]
   75 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
3574ed3
Fri 25 Aug 2023 03:24:37 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:15: error: expected identifier before ‘)’ token
   70 |   if(!list -> ) return NULL;
      |               ^
list.c:74:3: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
   74 |   return ;
      |   ^~~~~~
list.c:69:8: note: declared here
   69 | void * prevList(List * list) {
      |        ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
64c5140
Fri 25 Aug 2023 03:25:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:70:15: error: expected identifier before ‘)’ token
   70 |   if(!list -> ) return NULL;
      |               ^
Compilation failed
3cc9f5b
Fri 25 Aug 2023 03:25:33 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4d88067
Fri 25 Aug 2023 03:27:16 AM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
567e9f5
